--- a/student list.html
+++ b/student list.html
@@ -13,34 +13,18 @@
 <table border="1">
     <thead>
         <tr>
-            <td>
-                ID
-            </td>
-            <td>
-                Name
-            </td>
-            <td>
-                Faculty
-            </td>
-            <td>
-                Image
-            </td>
+            <td> ID</td>
+            <td>Name</td>
+            <td>Faculty</td>
+            <td>Image</td>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td>
-                20193415
-            </td>
-            <td>
-                malak mohammed
-            </td>
-            <td>
-                computer science
-            </td>
-            <td>
-                <img scr-"fue.jdk" width="60px" height="60px"/>
-            </td>
+            <td>20190194</td>
+            <td>Jasmin Omar</td>
+            <td>computer science</td>
+            <td><img scr-"fue.jdk" width="60px" height="60px"/></td>
         </tr>
     </tbody>
     <tfoot >
@@ -48,6 +32,12 @@
     </tfoot>
 <!--#section-->
 <hr/>
+<section>
+    <div class="searchbar">
+        <input type="search" class="searchbox">
+    </div>
+    
+</section>
 <!--footer-->
 &copy; <a hret="http//fue.edu.eg">future universty in egypt</a> &nbsp; &mdash; &nbsp; <a href="meilto 20193415@fue.edu.eg">contact</a>
 <!--#footer-->
